[gd_scene load_steps=4 format=3 uid="uid://cmdy32v105kli"]

[ext_resource type="Script" uid="uid://pqbhw87u6qwh" path="res://main_window/list_view/day_panel/day_panel.gd" id="1_a2phy"]
[ext_resource type="Script" uid="uid://bqai4pv020yjf" path="res://custom/tooltip.gd" id="2_wbwrx"]
[ext_resource type="PackedScene" uid="uid://be8ue76y7g22d" path="res://main_window/list_view/day_panel/scrollable_todo_list/scrollable_todo_list.tscn" id="3_db22u"]

[node name="DayPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_a2phy")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="PanelContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"DayPanel_Header"

[node name="Rows" type="VBoxContainer" parent="VBox/Header"]
layout_mode = 2

[node name="Date" type="Label" parent="VBox/Header/Rows"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"SubtleLabel"
text = "MMM DD, YYYY"
horizontal_alignment = 1
uppercase = true

[node name="Weekday" type="Label" parent="VBox/Header/Rows"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderLarge"
text = "WEEKDAY"
uppercase = true

[node name="DayOffset" type="Label" parent="VBox/Header/Rows"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Label_Italic"
text = "Day Offset"

[node name="Tooltip" type="Node" parent="VBox/Header"]
script = ExtResource("2_wbwrx")
text = "Double-Click To Zoom In"
popup_position = 4

[node name="ScrollableTodoList" parent="VBox" instance=ExtResource("3_db22u")]
unique_name_in_owner = true
layout_mode = 2
